Fix spacing

--- a/app/components/Hero/Hero.module.scss
+++ b/app/components/Hero/Hero.module.scss
@@ -1,12 +1,13 @@
 .wrapper {
-  display: flex;
-  flex-direction: column;
-  margin: auto;
-  width: 90%;
   height: 100vh;
   color: #f6f7f8;
+  padding: 45px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
   gap: 40px;
-  padding-top: 50px;
 }
 
 .mobileProfile {
@@ -58,19 +59,13 @@
 }
 
 @media only screen and (max-width: 900px) {
-  .wrapper {
-    padding: 40px;
-    gap: 30px;
-  }
   .mobileProfile {
     display: block;
   }
 
   .hero {
-    // width: 100%;
-    word-break: break-all;
     h1 {
-      font-size: 4rem !important;
+      font-size: 3.5em !important;
     }
     .profile {
       display: none;
